k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jap-shop-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.japshop.com
    - admin.japshop.com
    secretName: jap-shop-tls
  rules:
  - host: api.japshop.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jap-shop-api-gateway-service
            port:
              number: 4001
  - host: admin.japshop.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jap-shop-admin-frontend
            port:
              number: 80
